# proteosync1

./: .gitignore  GLP1R_receptor.pdbqt  README.md  SCRIPTS_OVERVIEW.md  environment.yml  pyproject.toml  test_api_compatibility.py  test_final_fixes.py  test_fixes.py
.github/workflows/: ci.yml
artifacts_backup/diagnostics/: ff_report.json
artifacts_backup/pockets/: GLP1R_semaglutide_pocket.tsv
boltz_results_glp1r/msa/: glp1r_0.csv
boltz_results_glp1r/processed/: manifest.json
config/: proteosync.toml  proteosync.yaml  targets.yaml
data/: glp1r.yaml
notebooks/: Static Model Generator.ipynb
proteosync_env/: pyvenv.cfg
results/: CID_134611040_vina_log.txt  CID_134611040_vina_out.pdbqt  CID_177990_vina_log.txt  CID_177990_vina_out.pdbqt  CID_23549991_vina_log.txt  CID_23549991_vina_out.pdbqt  CID_50986454_vina_log.txt  CID_50986454_vina_out.pdbqt  CID_68748835_vina_log.txt  CID_68748835_vina_out.pdbqt  CID_76287260_vina_log.txt  CID_76287260_vina_out.pdbqt  CID_9948690_vina_log.txt  CID_9948690_vina_out.pdbqt
scripts/: align_active_to_boltz.py  analyze_paths.py  analyze_results.py  analyze_trajectory.py  cluster_paths.py  convert_sdf_to_pdbqt.py  enhanced_plots.py  fetch_data.py  fetch_structures.py  ff_locator.py  generate_vae_trajectory.py  inspect_seed.py  minimize_ligands.py  model.py  play.py  postprocess_pdb.py  prepare_ligands.py  prepare_simulation.py  reconstruct_fullatom.py  run_path_sampling.py  run_screening.py  run_simulation.py  worker.py
src/vsx/bench/: cli.py
tests/: test_config.py  test_engine.py  test_pockets.py  test_settings_and_cli.py  test_version_and_paths.py
(+25 files in other folders)
