[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]

name = "proteosync"
version = "0.1.0"
description = "Mechanistic Characterization of Cryptic Allosteric Sites"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Varosync" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
proteosync = "vsx.bench.cli:app"
